# serializer version: 1
# name: TestVarOption.test
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int key = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test_dot
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int bar = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test_dot_deep_merge
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int bar = 1;
  const int baz_qux = 2;
  const int baz_baz_qux = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test_dot_shallow_merge
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int bar = 1;
  const int baz = 2;
  const int qux = 3;
  void main() {}
  '''
# ---
# name: TestVarOption.test_multiple
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int WORLD = 5;
  const int key = WORLD;
  void main() {}
  '''
# ---
# name: TestVarOption.test_override
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int WORLD = 5;
  const int key = WORLD;
  void main() {}
  '''
# ---
# name: TestVarOption.test_override_deep
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int foo_bar_baz = 1;
  void main() {}
  '''
# ---
# name: TestVarOption.test_override_from_deep
  '''
  // This file was generated by Hyprshade.
  // Do not edit it directly.
  
  const int foo_bar = 1;
  void main() {}
  '''
# ---
